[gd_scene load_steps=11 format=3 uid="uid://bm4g2hw05gsj8"]

[ext_resource type="FontFile" uid="uid://cnqaijndlvq85" path="res://fonts/Silkscreen/slkscreb.ttf" id="1_o5d7m"]
[ext_resource type="Script" path="res://Scenes/game.gd" id="1_ux5vs"]
[ext_resource type="Script" path="res://Scenes/data.gd" id="2_76pnn"]
[ext_resource type="Script" path="res://Scenes/music.gd" id="2_636ak"]
[ext_resource type="Script" path="res://Scenes/main_menu.gd" id="2_qlsa0"]
[ext_resource type="AudioStream" uid="uid://c0px7s5n6os3" path="res://Audio/Music/ChillLofiIntro.wav" id="3_5eywa"]
[ext_resource type="FontFile" uid="uid://baefd2fdohfp5" path="res://fonts/Silkscreen/slkscrb.ttf" id="4_2h43s"]
[ext_resource type="AudioStream" uid="uid://clc1b62qqssy7" path="res://Audio/Music/ChillLofiLoop.wav" id="4_qd23q"]
[ext_resource type="Script" path="res://Scenes/options_menu.gd" id="5_0ga1m"]
[ext_resource type="FontFile" uid="uid://pc3qtjn70mh1" path="res://fonts/Silkscreen/slkscr.ttf" id="5_8stvm"]

[node name="Game" type="Node"]
process_mode = 3
script = ExtResource("1_ux5vs")

[node name="Music" type="Node" parent="."]
script = ExtResource("2_636ak")

[node name="Intro" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("3_5eywa")
bus = &"Music"

[node name="Loop" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("4_qd23q")
bus = &"Music"

[node name="Data" type="Node" parent="."]
script = ExtResource("2_76pnn")

[node name="Menus" type="CanvasLayer" parent="."]
layer = 7

[node name="MainMenu" type="Control" parent="Menus"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_qlsa0")

[node name="ColorRect" type="ColorRect" parent="Menus/MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.105882, 0.0862745, 0.172549, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Menus/MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -386.0
offset_top = -221.5
offset_right = 386.0
offset_bottom = 221.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Menus/MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 99.74)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_o5d7m")
bbcode_enabled = true
text = "[center][font_size=50]Colour Cascade
[font_size=25]------------------------------"
scroll_active = false

[node name="HBoxContainer" type="HBoxContainer" parent="Menus/MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
alignment = 1

[node name="StartButton" type="Button" parent="Menus/MainMenu/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Start Game"

[node name="HBoxContainer2" type="HBoxContainer" parent="Menus/MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="DataButton" type="Button" parent="Menus/MainMenu/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Data"

[node name="TutorialButton" type="Button" parent="Menus/MainMenu/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "How To Play"

[node name="Options" type="Button" parent="Menus/MainMenu/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Options"

[node name="HBoxContainer3" type="HBoxContainer" parent="Menus/MainMenu/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HighScore" type="RichTextLabel" parent="Menus/MainMenu/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("4_2h43s")
bbcode_enabled = true
text = "[center][font_size=30]HIGH SCORE:"
scroll_active = false

[node name="HighScoreLabel" type="RichTextLabel" parent="Menus/MainMenu/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("4_2h43s")
bbcode_enabled = true
text = "[center][font_size=30]0000000"
scroll_active = false

[node name="DataReset" type="Control" parent="Menus/MainMenu"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Menus/MainMenu/DataReset"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0196078, 0.0352941, 0.152941, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Menus/MainMenu/DataReset"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -117.5
offset_top = -71.0
offset_right = 117.5
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="RichTextLabel" type="RichTextLabel" parent="Menus/MainMenu/DataReset/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_o5d7m")
bbcode_enabled = true
text = "[center][font_size=40]Reset score?"
scroll_active = false

[node name="HBoxContainer" type="HBoxContainer" parent="Menus/MainMenu/DataReset/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="ResetButton" type="Button" parent="Menus/MainMenu/DataReset/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Yes"

[node name="CloseButton" type="Button" parent="Menus/MainMenu/DataReset/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "No"

[node name="OptionsMenu" type="Control" parent="Menus"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_0ga1m")

[node name="ColorRect" type="ColorRect" parent="Menus/OptionsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0196078, 0.0352941, 0.152941, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Menus/OptionsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -170.5
offset_right = 175.0
offset_bottom = 170.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="RichTextLabel" type="RichTextLabel" parent="Menus/OptionsMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_o5d7m")
bbcode_enabled = true
text = "[font_size=45][center]Options"
scroll_active = false

[node name="RichTextLabel2" type="RichTextLabel" parent="Menus/OptionsMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("5_8stvm")
bbcode_enabled = true
text = "

[font_size=25]Music"
scroll_active = false

[node name="MusicSlider" type="HSlider" parent="Menus/OptionsMenu/VBoxContainer"]
layout_mode = 2
max_value = 3.0
step = 0.01
value = 1.0

[node name="RichTextLabel3" type="RichTextLabel" parent="Menus/OptionsMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("5_8stvm")
bbcode_enabled = true
text = "

[font_size=25]SFX"
scroll_active = false

[node name="SFXSlider" type="HSlider" parent="Menus/OptionsMenu/VBoxContainer"]
layout_mode = 2
max_value = 3.0
step = 0.01
value = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="Menus/OptionsMenu/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BackButton" type="Button" parent="Menus/OptionsMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Close"

[connection signal="finished" from="Music/Intro" to="Music" method="_on_intro_finished"]
[connection signal="button_down" from="Menus/MainMenu/VBoxContainer/HBoxContainer/StartButton" to="." method="_on_start_button_button_down"]
[connection signal="button_down" from="Menus/MainMenu/VBoxContainer/HBoxContainer2/DataButton" to="Menus/MainMenu" method="_on_data_button_button_down"]
[connection signal="button_down" from="Menus/MainMenu/VBoxContainer/HBoxContainer2/Options" to="." method="_on_options_button_down"]
[connection signal="button_down" from="Menus/MainMenu/DataReset/VBoxContainer/HBoxContainer/ResetButton" to="." method="_on_reset_button_button_down"]
[connection signal="button_down" from="Menus/MainMenu/DataReset/VBoxContainer/HBoxContainer/ResetButton" to="Menus/MainMenu" method="_on_reset_button_button_down"]
[connection signal="button_down" from="Menus/MainMenu/DataReset/VBoxContainer/HBoxContainer/CloseButton" to="Menus/MainMenu" method="_on_close_button_button_down"]
[connection signal="value_changed" from="Menus/OptionsMenu/VBoxContainer/MusicSlider" to="Menus/OptionsMenu" method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Menus/OptionsMenu/VBoxContainer/SFXSlider" to="Menus/OptionsMenu" method="_on_sfx_slider_value_changed"]
[connection signal="button_down" from="Menus/OptionsMenu/VBoxContainer/HBoxContainer/BackButton" to="Menus/OptionsMenu" method="_on_back_button_button_down"]
